
# This file is part of the SC Library
# Makefile.am in example/dmatrix
# included non-recursively from toplevel directory

if SC_BLAS
bin_PROGRAMS += example/dmatrix/sc_dmatrix
example_dmatrix_sc_dmatrix_SOURCES = example/dmatrix/dmatrix.c

LINT_CSOURCES += $(example_dmatrix_sc_dmatrix_SOURCES)
endif
