
# This file is part of the SC Library
# Makefile.am in example/json
# included non-recursively from toplevel directory

if SC_ENABLE_JANSSON

bin_PROGRAMS += example/json/sc_json_rw
example_json_sc_json_rw_SOURCES = example/json/json_rw.c

LINT_CSOURCES += $(example_json_sc_json_rw_SOURCES)

endif
