
# This file is part of the SC Library
# Makefile.am in example/matrixmultiply
# included non-recursively from toplevel directory

if SC_BLAS
bin_PROGRAMS += example/matrixmultiply/sc_matrixmultiply
example_matrixmultiply_sc_matrixmultiply_SOURCES = example/matrixmultiply/matrixmultiply.c

LINT_CSOURCES += $(example_matrixmultiply_sc_matrixmultiply_SOURCES)
endif
