
# This file is part of the SC Library
# Makefile.am in example/openmp
# included non-recursively from toplevel directory

if SC_ENABLE_OPENMP

bin_PROGRAMS += example/openmp/sc_openmp
example_openmp_sc_openmp_SOURCES = example/openmp/openmp.c

LINT_CSOURCES += $(example_openmp_sc_openmp_SOURCES)

endif
