
# This file is part of the SC Library
# Makefile.am in example/pthread
# included non-recursively from toplevel directory

if SC_ENABLE_PTHREAD

bin_PROGRAMS += example/pthread/sc_pthread
example_pthread_sc_pthread_SOURCES = example/pthread/pthread.c

LINT_CSOURCES += $(example_pthread_sc_pthread_SOURCES)

endif
