
# This file is part of the SC Library
# Makefile.am in example/sc3basic
# included non-recursively from toplevel directory

bin_PROGRAMS += \
  example/sc3basic/sc3_basics \
  example/sc3basic/sc3_logger
example_sc3basic_sc3_basics_SOURCES = example/sc3basic/basics.c
example_sc3basic_sc3_logger_SOURCES = example/sc3basic/logger.c

LINT_CSOURCES += $(example_sc3basic_sc3_basics_SOURCES) \
                 $(example_sc3basic_sc3_logger_SOURCES)
