
# This file is part of the SC Library
# Makefile.am in example/sc3json
# included non-recursively from toplevel directory

if SC_ENABLE_JANSSON

bin_PROGRAMS += example/sc3json/sc3_json_rw
example_sc3json_sc3_json_rw_SOURCES = example/sc3json/json_rw.c

LINT_CSOURCES += $(example_sc3json_sc3_json_rw_SOURCES)

endif
