
# This file is part of the SC Library
# Makefile.am in example/v3basics
# included non-recursively from toplevel directory

bin_PROGRAMS += \
  example/v3basics/sc3_basics \
  example/v3basics/sc3_log
example_v3basics_sc3_basics_SOURCES = example/v3basics/basics.c
example_v3basics_sc3_log_SOURCES = example/v3basics/log.c

LINT_CSOURCES += $(example_v3basics_sc3_basics_SOURCES)
