
# This file is part of the SC Library
# Makefile.am in example/vehicles
# included non-recursively from toplevel directory

bin_PROGRAMS += example/vehicles/sc_vehicles
example_vehicles_sc_vehicles_SOURCES = \
        example/vehicles/vehicle.h example/vehicles/vehicle.c \
        example/vehicles/car.h example/vehicles/car.c \
        example/vehicles/tunedcar.h example/vehicles/tunedcar.c \
        example/vehicles/boat.h example/vehicles/boat.c \
        example/vehicles/main.c

LINT_CSOURCES += $(example_vehicles_sc_vehicles_SOURCES)
